fix issue of partial transparent footer on iphone

--- a/web/public/shell/shell.css
+++ b/web/public/shell/shell.css
@@ -72,5 +72,5 @@
 
 .shell .contentFit {
     height: 80%;
-    margin-top: 10vh;
+    margin-top: 10dvh;
 }
